--- a/index.html
+++ b/index.html
@@ -7,6 +7,66 @@
 	<title>STARTER - Toybox Homepage</title>
 </head>
 <body>
-    
+    <!-- Skip Link -->
+	<a href="#mainContent" class="skip-link">Skip to main content.</a>
+
+	<!-- Announcements Bar -->
+	<div class="announcements">
+		<div class="wrapper">
+			<p>Complimentary shipping on orders over $50. Discount applied at checkout</p>
+		</div>
+	</div>
+
+	<!-- Navigation -->
+	<nav class="navBar">
+		<div class="wrapper">
+			<!-- Slide Out Menu -->
+			<input type="checkbox" id="openSideMenu">
+			<label for="openSideMenu">
+				<img src="./assets/menu-button.svg" alt="Menu Button">
+			</label>
+
+			<!-- Slide Out Nav Content  -->
+			<div class="SlideOutNav">
+				<button>x</button>
+
+				<!-- Menu Content -->
+				<nav>
+					<ul>
+						<li>
+							<a href="">Shop</a>
+						</li>
+						<li>
+							<a href="">About</a>
+						</li>
+						<li>
+							<a href="">FAQ</a>
+						</li>
+						<li>
+							<a href="">News</a>
+						</li>
+						<li>
+							<a href="">Contact</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+
+			<!-- NavBar -->
+				<!-- Logo -->
+			<a href="#home" class="logo">
+				<h1>Toybox</h1>
+			</a>
+
+			<!-- Search/Cart -->
+			
+			<button class="menuIcon">
+				<img src="./assets/search.svg" alt="Search Icon">
+			</button>
+			<img src="./assets/shop-bag.svg" alt="">
+
+
+		</div>
+	</nav>
 </body>
 </html>
