--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 				<h1>Toybox</h1>
 			</a>
 
-			<!-- Search/Cart -->
-			
+			<!-- Search/Cart, 3 icons together on right side -->
+			<div class="searchCart">
+				Search
+			</div>
 			<button class="menuIcon">
 				<img src="./assets/search.svg" alt="Search Icon">
 			</button>
@@ -82,7 +84,7 @@
 				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristiqur
 				turpis iaculis pulvinar tellus</p>
 				<a href="#shop" class="shopButton">Shop All</a>
-			</div>
+			</div> <!-- END TextContainer -->
 		</div>
 	</header>
 
@@ -97,16 +99,51 @@
 				<!-- product gallery -->
 				<div class="categoryGallery">
 					<ul>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
+						<li class="items itemOne">
+							<a href="#">
+								<img src="./assets/safari-trio.jpg" alt="Three wooden safari animals toys for kids">
+								<h4>Safari</h4>
+								<p>Land-dwelling African favourites</p>
+							</a>
+						</li>
+						<li class="items itemTwo">
+							<a href="#">
+								<img src="" alt="">
+								<h4>Ocean</h4>
+								<p>Adorable aquatic creatures</p>
+							</a>
+						</li>
+						<li class="items itemThree">
+							<a href="#">
+								<img src="" alt="">
+								<h4>Dinos</h4>
+								<p>Meet these prehistoric pals</p>
+							</a>
+						</li>
+						<li  class="items itemFour">
+							<a href="#">
+								<img src="" alt="">
+								<h4>Sale</h4>
+								<p>Act quickly and grab these bargains</p>
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</section>
 
 		<!-- Let Them Play Section -->
+
+		<section class="play" id="play">
+			<div class="wrapper">
+				<div class="playContent">
+					<h3>Learning through doing</h3>
+					<h2>Let them Play</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, saepe quod autem inventore consequuntur ad totam porro odio soluta iusto voluptatum ipsam vero eos nihil ratione eum quaerat quo voluptatem.</p>
+					<a href="#" class="aboutButton">Learn About Us</a>
+				</div>
+			</div>
+		</section>
 
 	</main>
 
