added some img source and alt attribute

--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
 						</li>
 						<li class="items itemTwo">
 							<a href="#">
-								<img src="" alt="">
+								<img src="./assets/ocean-trio.jpg" alt="Three wooden oceanic animals toys for kids">
 								<h4>Ocean</h4>
 								<p>Adorable aquatic creatures</p>
 							</a>
 						</li>
 						<li class="items itemThree">
 							<a href="#">
-								<img src="" alt="">
+								<img src="./assets/dino-trio.jpg" alt="Three wooden dinosauraus toys for kids">
 								<h4>Dinos</h4>
 								<p>Meet these prehistoric pals</p>
 							</a>
 						</li>
 						<li  class="items itemFour">
 							<a href="#">
-								<img src="" alt="">
+								<img src="./assets/sale.jpg" alt="a kid playing with two trojan horse toys">
 								<h4>Sale</h4>
 								<p>Act quickly and grab these bargains</p>
 							</a>
