Added footer logo and nav html

--- a/index.html
+++ b/index.html
@@ -145,6 +145,82 @@
 			</div>
 		</section>
 
+		<footer id="footer" class="footer">
+			<div class="wrapper">
+				
+				<div class="footerFlexContainer">
+					<!-- Logo -->
+					<a href="" class="logo">
+						<h4>Toybox</h4>
+					</a>
+
+					<!-- FooterNAV container -->
+					<div class="footerNav">
+						<nav>
+							<ul class="footerShop">
+								<li>
+									<h5>Shop</h5>
+								</li>
+								<li>
+									<a href="">Safari</a>
+								</li>
+								<li>
+									<a href="#">Ocean</a>
+								</li>
+								<li>
+									<a href="#">Dinos</a>
+								</li>
+								<li>
+									<a href="#">Sale</a>
+								</li>
+							</ul> <!-- END Footer Shop List -->
+
+
+							<ul class="footerAbout">
+								<li>
+									<h5>About</h5>
+								</li>
+								<li>
+									<a href="#">About Us</a>
+								</li>
+								<li>
+									<a href="#">FAQ</a>
+								</li>
+								<li>
+									<a href="#">News</a>
+								</li>
+								<li>
+									<a href="#">Legal</a>
+								</li>
+								<li>
+									<a href="#">Contact</a>
+								</li>
+							</ul> <!-- End Footer About -->
+
+							<!-- Footer Template List -->
+							<ul class="footerTemp">
+								<li>
+									<h5>Template</h5>
+								</li>
+								<li>
+									<a href="#">Style Guide</a>
+								</li>
+								<li>
+									<a href="#">Licenses</a>
+								</li>
+								<li>
+									<a href="#">Change Log</a>
+								</li>
+							</ul> <!-- END Footer Template list -->
+
+						</nav>
+					</div>
+
+				<!-- Social and Copyright Flex Container -->
+
+			</div>
+		</footer>
+
 	</main>
 
 
