--- a/index.html
+++ b/index.html
@@ -144,84 +144,108 @@
 				</div>
 			</div>
 		</section>
-
-		<footer id="footer" class="footer">
-			<div class="wrapper">
-				
-				<div class="footerFlexContainer">
-					<!-- Logo -->
-					<a href="" class="logo">
-						<h4>Toybox</h4>
-					</a>
-
-					<!-- FooterNAV container -->
-					<div class="footerNav">
-						<nav>
-							<ul class="footerShop">
-								<li>
-									<h5>Shop</h5>
-								</li>
-								<li>
-									<a href="">Safari</a>
-								</li>
-								<li>
-									<a href="#">Ocean</a>
-								</li>
-								<li>
-									<a href="#">Dinos</a>
-								</li>
-								<li>
-									<a href="#">Sale</a>
-								</li>
-							</ul> <!-- END Footer Shop List -->
-
-
-							<ul class="footerAbout">
-								<li>
-									<h5>About</h5>
-								</li>
-								<li>
-									<a href="#">About Us</a>
-								</li>
-								<li>
-									<a href="#">FAQ</a>
-								</li>
-								<li>
-									<a href="#">News</a>
-								</li>
-								<li>
-									<a href="#">Legal</a>
-								</li>
-								<li>
-									<a href="#">Contact</a>
-								</li>
-							</ul> <!-- End Footer About -->
-
-							<!-- Footer Template List -->
-							<ul class="footerTemp">
-								<li>
-									<h5>Template</h5>
-								</li>
-								<li>
-									<a href="#">Style Guide</a>
-								</li>
-								<li>
-									<a href="#">Licenses</a>
-								</li>
-								<li>
-									<a href="#">Change Log</a>
-								</li>
-							</ul> <!-- END Footer Template list -->
-
-						</nav>
-					</div>
-
-				<!-- Social and Copyright Flex Container -->
-
-			</div>
-		</footer>
-
 	</main>
+
+	<footer id="footer" class="footer">
+		<div class="wrapper">
+			
+			<div class="footerFlexContainer">
+				<!-- Logo -->
+				<a href="" class="logo">
+					<h4>Toybox</h4>
+				</a>
+
+				<!-- FooterNAV container -->
+				<div class="footerNav">
+					<nav>
+						<ul class="footerShop">
+							<li>
+								<h5>Shop</h5>
+							</li>
+							<li>
+								<a href="">Safari</a>
+							</li>
+							<li>
+								<a href="#">Ocean</a>
+							</li>
+							<li>
+								<a href="#">Dinos</a>
+							</li>
+							<li>
+								<a href="#">Sale</a>
+							</li>
+						</ul> <!-- END Footer Shop List -->
+
+
+						<ul class="footerAbout">
+							<li>
+								<h5>About</h5>
+							</li>
+							<li>
+								<a href="#">About Us</a>
+							</li>
+							<li>
+								<a href="#">FAQ</a>
+							</li>
+							<li>
+								<a href="#">News</a>
+							</li>
+							<li>
+								<a href="#">Legal</a>
+							</li>
+							<li>
+								<a href="#">Contact</a>
+							</li>
+						</ul> <!-- End Footer About -->
+
+						<!-- Footer Template List -->
+						<ul class="footerTemp">
+							<li>
+								<h5>Template</h5>
+							</li>
+							<li>
+								<a href="#">Style Guide</a>
+							</li>
+							<li>
+								<a href="#">Licenses</a>
+							</li>
+							<li>
+								<a href="#">Change Log</a>
+							</li>
+						</ul> <!-- END Footer Template list -->
+					</nav>
+				</div><!-- END FooterNav -->
+			</div><!-- END FooterFlexContainer -->
+
+			<!-- Social and Copyright Flex Container -->
+			<div class="social">
+
+				<!-- icon container -->
+				<div class="socialIcons">
+					<a href="#">
+						<i class="twitter" aria-hidden="true"></i>
+						<span class="sr-only">Link to Twitter</span>
+					</a>
+					<a href="#">
+						<i class="pinterest" aria-hidden="true"></i>
+						<span class="sr-only">Link to Pinterest</span>
+					</a>
+					<a href="#">
+						<i class="insta" aria-hidden="true"></i>
+						<span class="sr-only">Link to Instagram</span>
+					</a>
+					<a href="#">
+						<i class="facebook" aria-hidden="true"></i>
+						<span class="sr-only">Link to Facebook</span>
+					</a>
+				</div> <!-- END socialIcons -->
+
+				<div class="copyright">
+					<p>Copyright Company</p>
+				</div> <!-- END Copyright -->
+			</div> <!-- END Social -->
+		</div> <!-- END Footer Wrapper  -->
+	</footer>
 
 
 </body>
