--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./styles/styles.css">
 	<title>STARTER - Toybox Homepage</title>
 </head>
 <body>
@@ -241,7 +242,7 @@
 				</div> <!-- END socialIcons -->
 
 				<div class="copyright">
-					<p>Copyright Company</p>
+					<p>© Copyright Company</p>
 				</div> <!-- END Copyright -->
 			</div> <!-- END Social -->
 		</div> <!-- END Footer Wrapper  -->
