--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- Announcements Bar -->
 	<div class="announcements">
 		<div class="wrapper">
-			<p>Complimentary shipping on orders over $50. Discount applied at checkout</p>
+			<p class="smallCopy">Complimentary shipping on orders over $50. Discount applied at checkout</p>
 		</div>
 	</div>
 
@@ -28,7 +28,7 @@
 			</label>
 
 			<!-- Slide Out Nav Content  -->
-			<div class="SlideOutNav">
+			<div class="slideOutNav">
 				<button>x</button>
 
 				<!-- Menu Content -->
@@ -89,7 +89,7 @@
 				<h2>Go on, let them play with wooden blocks.</h2>
 				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristiqur
 				turpis iaculis pulvinar tellus.</p>
-				<a href="#shop" class="shopButton">Shop All</a>
+				<a href="#shop" class="shopButton button">Shop All</a>
 			</div> <!-- END TextContainer -->
 		</div>
 	</header>
@@ -148,7 +148,7 @@
 					<p>Bauris eget lacus, amet mollis felis, sed posuere odio.
 					Justo purus orci ultricies et. Sit etiam porta sed tellus
 					Cattis pellentesque felis tristique get ours feugiat massa.</p>
-					<a href="#" class="aboutButton">Learn About Us</a>
+					<a href="#" class="aboutButton button">Learn About Us</a>
 				</div>
 			</div>
 		</section>
@@ -250,7 +250,7 @@
 				</div> <!-- END socialIcons -->
 
 				<div class="copyright">
-					<p>© Copyright Company</p>
+					<p class="smallCopy">© Copyright Company</p>
 				</div> <!-- END Copyright -->
 			</div> <!-- END Social -->
 		</div> <!-- END Footer Wrapper  -->
