finished nav and slideOut menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
 			<!-- Slide Out Nav Content  -->
 			<div class="slideOutNav">
-				<button>x</button>
+				<div class="buttonContainer">
+					<!-- <button class="menuClose">x</button> -->
+				<label for="openSideMenu">x</label>
+				</div>
 
 				<!-- Menu Content -->
 				<nav>
