finished categories section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="slideOutNav">
 				<div class="buttonContainer">
 					<!-- <button class="menuClose">x</button> -->
-				<label for="openSideMenu">x</label>
+					<label for="openSideMenu" class="menuClose">x</label>
 				</div>
 
 				<!-- Menu Content -->
@@ -107,7 +107,7 @@
 
 				<!-- product gallery -->
 				<div class="categoryGallery">
-					<ul>
+					<ul class="categoryList">
 						<li class="items itemOne">
 							<a href="#">
 								<img src="./assets/safari-trio.jpg" alt="Three wooden safari animals toys for kids">
