--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./styles/styles.css">
+	<script src="https://kit.fontawesome.com/3e3f2f5719.js" crossorigin="anonymous"></script>
 	<title>STARTER - Toybox Homepage</title>
 </head>
 <body>
@@ -58,7 +59,7 @@
 
 			<!-- NavBar -->
 				<!-- Logo -->
-			<a href="#home" class="logo">
+			<a href="#home" class="footerLogo">
 				<h1>Toybox</h1>
 			</a>
 
@@ -162,7 +163,7 @@
 			
 			<div class="footerFlexContainer">
 				<!-- Logo -->
-				<a href="" class="logo">
+				<a href="" class="footerLogo">
 					<h4>Toybox</h4>
 				</a>
 
@@ -235,19 +236,19 @@
 				<!-- icon container -->
 				<div class="socialIcons">
 					<a href="#">
-						<i class="twitter" aria-hidden="true"></i>
+						<i class="fa-brands fa-twitter" aria-hidden=""></i>
 						<span class="sr-only">Link to Twitter</span>
 					</a>
 					<a href="#">
-						<i class="pinterest" aria-hidden="true"></i>
+						<i class="fa-brands fa-pinterest" aria-hidden=""></i>
 						<span class="sr-only">Link to Pinterest</span>
 					</a>
 					<a href="#">
-						<i class="insta" aria-hidden="true"></i>
+						<i class="fa-brands fa-instagram" aria-hidden=""></i>
 						<span class="sr-only">Link to Instagram</span>
 					</a>
 					<a href="#">
-						<i class="facebook" aria-hidden="true"></i>
+						<i class="fa-brands fa-facebook" aria-hidden=""></i>
 						<span class="sr-only">Link to Facebook</span>
 					</a>
 				</div> <!-- END socialIcons -->
