--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<a href="">News</a>
 						</li>
 						<li>
-							<a href="">Contact</a>
+							<a href="./contact.html">Contact</a>
 						</li>
 					</ul>
 				</nav>
@@ -157,7 +157,7 @@
 			</div>
 		</section>
 	</main>
-
+	<!-- FOOTER -->
 	<footer id="footer" class="footer">
 		<div class="wrapper">
 			
@@ -207,7 +207,7 @@
 								<a href="#">Legal</a>
 							</li>
 							<li>
-								<a href="#">Contact</a>
+								<a href="./contact.html">Contact</a>
 							</li>
 						</ul> <!-- End Footer About -->
 
